Fix alignment on header search field

--- a/app/assets/sass/modules/nhs-template.scss
+++ b/app/assets/sass/modules/nhs-template.scss
@@ -64,6 +64,7 @@ body {
       width: calc(100% - 40px);
       height: 40px;
       padding-left: 6px;
+      margin: 0;
       border: none;
       @include media(tablet) {
         width: 260px;
